# SmartHouse

./: Cargo.toml
src/: device_info.rs  devices.rs  lib.rs  main.rs  smart_house.rs  smart_socket_client.rs  smart_socket_server.rs  udp_thermometer.rs  udp_thermometer_main.rs
src/device_info/: devices.rs
src/udp_thermometer/: udp_thermometer_listener.rs  udp_thermometer_simulator.rs
