[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smart_house"
path = "src/smart_house.rs"

[[bin]]
name = "smart_socket_client"
path = "src/smart_socket_client.rs"

[[bin]]
name = "smart_socket_server"
path = "src/smart_socket_server.rs"

[[bin]]
name = "udp_thermometer_main"
path = "src/udp_thermometer_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
